2002-02-04  Lauris Kaplinski  <lauris@ximian.com>

	* gnome-ui-properties.c (dialog_button_clicked_cb): Use GtkDialog

2002-02-01  Seth Nickell  <snickell@stanford.edu>

	* behavior-capplet.png:

	Change to Jimmac's alternate behavior icon.

Mon Jan 28 22:18:34 2002  Jonathan Blandford  <jrb@gnome.org>

	* gnome-ui-properties.c (create_dialog): install globally

Mon Jan 28 22:09:30 2002  Jonathan Blandford  <jrb@gnome.org>

	* gnome-ui-properties.c: completely rethink this dialog

2002-01-27  Seth Nickell  <snickell@stanford.edu>

	* behavior.desktop.in:

	Add Categories field.

2002-01-14  Bradford Hovinen  <hovinen@ximian.com>

	* Makefile.am: Update

	* main.c (main): Remove Ximian archiver stuff

2002-01-14  Richard Hestilow  <hestilow@ximian.com>

	* Gnome 2 port. (Settings only halfway work right now.)

2001-09-29  Richard Hestilow  <hestilow@ximian.com>

	* prefs-widget.c (prefs_widget_set_arg): Register
	callbacks after loading the preferences; otherwise they will
	get triggered unnecessarily.
	(selected_cb): Only trigger a change if there really was one.
	Fixes bug #9161.

2001-07-27  Bradford Hovinen  <hovinen@ximian.com>

	* RELEASE : 1.5.2

2001-07-20  Chema Celorio  <chema@celorio.com>

	* RELEASE : 1.5.0

2001-07-19  Chema Celorio  <chema@celorio.com>

	* Makefile.am (cappletname): distcheck fixes
