@@ -1,3 +1,7 @@
+2002-02-10  Richard Hestilow  <hestilow@ximian.com>
+
+	* Make dialog Apply/Close.
+
 2002-02-04  Lauris Kaplinski  <lauris@ximian.com>
 
 	* gnome-ui-properties.c (dialog_button_clicked_cb): Use GtkDialog
